@@ -1,6 +1,8 @@
                     Changes made to Pyjamas since 0.6
                     ---------------------------------
 
+ * Add rfind to string (and tests)
+
  * Added new "Handler" classes MouseHandler, ClickHandler, KeyboardHandler
    and FocusHandler, which need only be "mixed in" to a Widget in order
    to get event handling.
